--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,14 +50,16 @@
             android:id="@+id/imageView4"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:adjustViewBounds="true"
+
             app:srcCompat="@drawable/zvezda_ochki" />
 
         <TextView
+            android:layout_weight="2"
             android:id="@+id/menu_coins"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:ellipsize="end"
             android:gravity="end"
             android:lines="01"
             android:textSize="20sp"
@@ -67,7 +69,7 @@
             android:id="@+id/imageView5"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+
             app:srcCompat="@drawable/moneta" />
 
     </LinearLayout>
