--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:orientation="horizontal"
@@ -21,7 +22,6 @@
             android:layout_width="10dp"
             android:layout_height="30dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:adjustViewBounds="true"
             android:src="@drawable/button_music" />
@@ -43,33 +43,33 @@
             android:layout_weight="1"
             android:gravity="end"
             android:lines="01"
-            android:textSize="20sp"
-            android:text="0" />
+            android:text="0"
+            android:textSize="20sp" />
 
         <ImageView
             android:id="@+id/imageView4"
-            android:layout_width="wrap_content"
+            android:layout_width="32dp"
             android:layout_height="match_parent"
+            android:layout_marginHorizontal="8dp"
             android:adjustViewBounds="true"
-
             app:srcCompat="@drawable/zvezda_ochki" />
 
         <TextView
-            android:layout_weight="2"
             android:id="@+id/menu_coins"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:ellipsize="end"
             android:gravity="end"
             android:lines="01"
-            android:textSize="20sp"
-            android:text="0" />
+            android:text="0"
+            android:textSize="20sp" />
 
         <ImageView
             android:id="@+id/imageView5"
-            android:layout_width="wrap_content"
+            android:layout_width="32dp"
             android:layout_height="match_parent"
-
+            android:layout_marginHorizontal="8dp"
             app:srcCompat="@drawable/moneta" />
 
     </LinearLayout>
